@@ -1,3 +1,9 @@
+2006-03-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/TreeView_Detail.h,
+	  src/TreeView_Detail.cc: made icon behaviour more intelligent
+	* src/GParted_Core.cc: small improvement in open_device_and_disk()
+
 2006-03-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/GParted_Core.cc: made some small adjustments to devicechecks.
